<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidatc.filestorage.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    <Button
        android:id="@+id/write_file_to_internal_storage"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/write_file_to_internal_storage"/>
    <Button
        android:id="@+id/read_file_from_internal_storage"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/read_file_from_internal_storage"/>
    <Button
        android:id="@+id/write_file_to_external_storage"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/write_file_to_external_storage"/>
    <Button
        android:id="@+id/read_file_from_external_storage"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/read_file_from_external_storage"/>

</RelativeLayout>
